@@ -1,0 +1,13 @@
+<!--
+  -- Common page footer
+  -->
+<table class="footer">
+  <tr><td>&nbsp;</td></tr>
+</table>
+<table class="copyright">
+  <tr><td class="small">
+      © Copyright 2007-2022 Paravel Systems. All rights reserved.
+      Contact the <a class="small-link" href="mailto:webmaster@paravelsystems.com">
+	Webmaster</a> with any questions or comments.
+  </td></tr>
+</table>
