@@ -1,0 +1,31 @@
+<!--
+  -- Common page header
+-->
+<table class="header">
+  <tbody>
+  <tr>
+    <td>
+      <IMG src="images/Rivendell.PNG" border="0">
+      Open Source Radio Automation
+    </td>
+    <td>
+      &nbsp;
+    </td>
+    <td>
+      <!--
+	-- Versions widget
+	-->
+      <table class="versions">
+	<tr>
+	  <td class="header-right">Latest Production Release:</td>
+	  <td class="header-left">v3.6.6</td>
+	</tr>
+	<tr>
+	  <td class="header-right">Latest Development Release:</td>
+	  <td class="header-left">v4.0.0rc0</td>
+	</tr>
+      </table>
+    </td>
+  </tr>
+  </tbody>
+</table>
