@@ -70,12 +70,6 @@ color: black;
 background-color: white;
 padding 0;
 }
-.rivendell {
-color: 9C0001;
-font-family: arial,san-serif;
-font-size: 18;
-font-weight: bold;
-}
 .small {
 font-size: 8pt;
 font-weight: normal;
