@@ -1,13 +1,0 @@
-<!--
-  -- Versions widget
-  -->
-<table class="versions">
-  <tr>
-    <td class="header-right">Latest Production Release:</td>
-    <td class="header-left">v3.6.6</td>
-  </tr>
-  <tr>
-    <td class="header-right">Latest Development Release:</td>
-    <td class="header-left">v4.0.0rc0</td>
-  </tr>
-</table>
