@@ -20,3 +20,7 @@
 	* Split out styling data into 'htdocs/rivendellaudio.css'.
 2022-10-10 Fred Gleason <fredg@paravelsystems.com>
 	* Split out the version display into 'htdocs/versions.html'.
+2022-10-10 Fred Gleason <fredg@paravelsystems.com>
+	* Split out the page header into 'htdocs/common/header.html'.
+	* Moved version display into 'htdocs/common/header.html'.
+	* Split out the page footer into 'htdocs/common/footer.html'.
